--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--
         STYLES 
     -->
+    <link rel="shortcut icon" type="image/png" href="res/favicon-32x32.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style/slick.css" />
     <link rel="stylesheet" href="style/main.css">
@@ -230,15 +231,16 @@
         </section>
     </section>
 
-    <section id="contact-us">
+    <!-- <section id="contact-us">
         <div class="contact-info">
             <div class="container">
                 <h1>تواصل معنا</h1>
+                <hr>
                 <div class="row">
                     <div class="col-lg-5 col-md-12 right">
                         <div class="top">
                             <h3>اتصل بنا</h3>
-                            <h4 style="margin-top: 20px;">(+20) 0106 2357 274</h4>
+                            <h4>(+20) 0106 2357 274</h4>
                         </div>
                         <h3>ساعات العمل</h3>
                         <h5> السبت الى الخميس<span> 9 صباحا إلى 5 مساء </span></h5>
@@ -247,7 +249,7 @@
                         <div class="top">
                             <h2>الأسكندرية - مصر</h2>
                             <h5>شارع محرم بك، الدور الخامس، شقة </h5>
-                            <h4 style="margin-top: 50px;">rcc.eg.00@gmail.com <span>: الإيميل</span></h4>
+                            <h4>rcc.eg.00@gmail.com <span>: الإيميل</span></h4>
                         </div>
                         <div class="dash"></div>
                     </div>
@@ -255,8 +257,55 @@
             </div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.2579195497971!2d29.905763529201042!3d31.19213499884245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c394e6fb826b%3A0x1706790e3eb15f6d!2s8%20Moharram%20Bek%2C%20Al%20Bab%20Al%20Gadid%20WA%20Mansha%2C%20Moharam%20Bek%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1583792564862!5m2!1sen!2seg"
-                width="94%" height="800" frameborder="0">
+                width="100%" height="800" frameborder="0">
             </iframe>
+        </div>
+    </section> -->
+
+    <section id="contact-us">
+        <div class="contact-info">
+            <div class="container">
+                <h1>تواصل معنا</h1>
+                <hr>
+                <div class="row" dir="rtl">
+                    <div class="col-lg-5 col-md-12 right">
+                        <div class="top">
+                            <h2>الأسكندرية - مصر</h2>
+                            <span style="font-size: 20px;">شارع محرم بك، الدور الخامس، شقة </span>
+                            <h4 style="margin-top: 40px;"><span>الإيميل : </span>rcc.eg.00@gmail.com </h4>
+                            <div class="dash"></div>
+                        </div>
+                        <div class="bottom">
+                            <h3>اتصل بنا</h3>
+                            <h5 dir="ltr">(+20) 0106 2357 274</h5>
+                            <h3 style="margin-top: 40px;">ساعات العمل</h3>
+                            <h5 style="margin-top: 10px;"> السبت الى الخميس<span> 9 صباحا إلى 5 مساء </span></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-12 left">
+                        <div class="map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.2579195497971!2d29.905763529201042!3d31.19213499884245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c394e6fb826b%3A0x1706790e3eb15f6d!2s8%20Moharram%20Bek%2C%20Al%20Bab%20Al%20Gadid%20WA%20Mansha%2C%20Moharam%20Bek%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1583792564862!5m2!1sen!2seg"
+                                frameborder="0">
+                            </iframe>
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-4 col-md-12 left">
+                        <div class="top">
+                            <h2>الأسكندرية - مصر</h2>
+                            <h5>شارع محرم بك، الدور الخامس، شقة </h5>
+                            <h4>rcc.eg.00@gmail.com <span>: الإيميل</span></h4>
+                        </div>
+                        <div class="dash"></div>
+                    </div>
+                    <div class="col-lg-3">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.2579195497971!2d29.905763529201042!3d31.19213499884245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c394e6fb826b%3A0x1706790e3eb15f6d!2s8%20Moharram%20Bek%2C%20Al%20Bab%20Al%20Gadid%20WA%20Mansha%2C%20Moharam%20Bek%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1583792564862!5m2!1sen!2seg"
+                            width="100%" height="800" frameborder="0">
+                        </iframe>
+                    </div> -->
+                </div>
+            </div>
         </div>
     </section>
 
