--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <link rel="shortcut icon" type="image/png" href="res/favicon-32x32.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style/slick.css" />
+    <link rel="stylesheet" href="style/animate.css">
     <link rel="stylesheet" href="style/main.css">
     <title>RCC | باقات التشطيب</title>
 </head>
 
 <body>
     <header>
-        <div class="header-img">
+        <div class="header-img wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
         </div>
     </header>
     <section id="packages">
         <div class="titles">
-            <h3>أسعار و تفاصيل الباقات</h3>
-            <h5>اختار الباقة اللي تناسبك</h5>
+            <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.4s">أسعار و تفاصيل الباقات</h3>
+            <h5 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">اختار الباقة اللي تناسبك</h5>
         </div>
         <div class="slider container">
-            <div class="card" style="width: 18rem;">
+            <div class="card wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" style="width: 18rem;">
                 <div class="card-body">
                     <h4>الباقة الإقتصادية</h4>
                     <h3 class="card-title">1000 EGP</h3>
@@ -70,7 +71,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card wow fadeIn" data-wow-duration="1s" data-wow-delay="1s" style="width: 18rem;">
                 <div class="card-body">
                     <h4>الباقة الفضية</h4>
                     <h3 class="card-title">1500 EGP</h3>
@@ -119,7 +120,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s" style="width: 18rem;">
                 <div class="card-body">
                     <h4>الباقة الذهبية</h4>
                     <h3 class="card-title">2000 EGP</h3>
@@ -167,7 +168,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s" style="width: 18rem;">
                 <div class="card-body">
                     <h4>الباقة الفضية</h4>
                     <h3 class="card-title">1500 EGP</h3>
@@ -218,7 +219,7 @@
             </div>
         </div>
         <section id="special">
-            <div class="container">
+            <div class="container wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="offer">
@@ -231,38 +232,38 @@
         </section>
     </section>
 
-    <!-- <section id="contact-us">
+    <section id="contact-us">
         <div class="contact-info">
             <div class="container">
-                <h1>تواصل معنا</h1>
-                <hr>
-                <div class="row">
-                    <div class="col-lg-5 col-md-12 right">
-                        <div class="top">
-                            <h3>اتصل بنا</h3>
-                            <h4>(+20) 0106 2357 274</h4>
-                        </div>
-                        <h3>ساعات العمل</h3>
-                        <h5> السبت الى الخميس<span> 9 صباحا إلى 5 مساء </span></h5>
-                    </div>
+                <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">تواصل معنا</h1>
+                <hr class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+                <div class="row wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s" dir="rtl">
                     <div class="col-lg-7 col-md-12 left">
                         <div class="top">
                             <h2>الأسكندرية - مصر</h2>
-                            <h5>شارع محرم بك، الدور الخامس، شقة </h5>
-                            <h4>rcc.eg.00@gmail.com <span>: الإيميل</span></h4>
+                            <span style="font-size: 20px;">شارع محرم بك، الدور الخامس، شقة </span>
+                            <h4 style="margin-top: 50px;"><span>الإيميل : </span>rcc.eg.00@gmail.com </h4>
                         </div>
                         <div class="dash"></div>
                     </div>
+                    <div class="col-lg-5 col-md-12 right">
+                        <div class="bottom">
+                            <h3>اتصل بنا</h3>
+                            <h4 dir="auto">(+20) 0106 2357 274</h4>
+                        </div>
+                        <h3 style="margin-top: 70px;">ساعات العمل</h3>
+                        <h5> السبت الى الخميس<span> 9 صباحا إلى 5 مساء </span></h5>
+                    </div>
                 </div>
             </div>
-            <iframe
+            <iframe class="wow zoomIn" data-wow-duration="1s" data-wow-delay="2s"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.2579195497971!2d29.905763529201042!3d31.19213499884245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c394e6fb826b%3A0x1706790e3eb15f6d!2s8%20Moharram%20Bek%2C%20Al%20Bab%20Al%20Gadid%20WA%20Mansha%2C%20Moharam%20Bek%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1583792564862!5m2!1sen!2seg"
-                width="100%" height="800" frameborder="0">
+                width="100%" height="500" frameborder="0">
             </iframe>
         </div>
-    </section> -->
+    </section>
 
-    <section id="contact-us">
+    <!-- <section id="contact-us">
         <div class="contact-info">
             <div class="container">
                 <h1>تواصل معنا</h1>
@@ -290,24 +291,10 @@
                             </iframe>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-4 col-md-12 left">
-                        <div class="top">
-                            <h2>الأسكندرية - مصر</h2>
-                            <h5>شارع محرم بك، الدور الخامس، شقة </h5>
-                            <h4>rcc.eg.00@gmail.com <span>: الإيميل</span></h4>
-                        </div>
-                        <div class="dash"></div>
-                    </div>
-                    <div class="col-lg-3">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d853.2579195497971!2d29.905763529201042!3d31.19213499884245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c394e6fb826b%3A0x1706790e3eb15f6d!2s8%20Moharram%20Bek%2C%20Al%20Bab%20Al%20Gadid%20WA%20Mansha%2C%20Moharam%20Bek%2C%20Alexandria%20Governorate!5e0!3m2!1sen!2seg!4v1583792564862!5m2!1sen!2seg"
-                            width="100%" height="800" frameborder="0">
-                        </iframe>
-                    </div> -->
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- 
         SCRIPTS 
@@ -316,6 +303,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
