--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <div class="card-body">
                     <h4>الباقة الإقتصادية</h4>
                     <h3 class="card-title">1000 EGP</h3>
-                    <p class="card-text">التصميم من اختيار العميل في حدود الباقة.</p>
+                    <p class="card-text">التصميم من اختيار</p>
+                    <p class="card-text" style="margin-bottom: 25px;">العميل في حدود الباقة</p>
                     <h5>الكهرباء</h5>
                     <ul dir="rtl">
                         <li>لوحة عمومية</li>
@@ -75,7 +76,8 @@
                 <div class="card-body">
                     <h4>الباقة الفضية</h4>
                     <h3 class="card-title">1500 EGP</h3>
-                    <p class="card-text">التصميم من اختيار العميل في حدود الباقة.</p>
+                    <p class="card-text">التصميم من اختيار</p>
+                    <p class="card-text" style="margin-bottom: 25px;">العميل في حدود الباقة</p>
                     <h5>الكهرباء</h5>
                     <ul dir="rtl">
                         <li>أسلاك السویدى بالضمان </li>
@@ -124,7 +126,8 @@
                 <div class="card-body">
                     <h4>الباقة الذهبية</h4>
                     <h3 class="card-title">2000 EGP</h3>
-                    <p class="card-text">التصميم من اختيار العميل في حدود الباقة.</p>
+                    <p class="card-text">التصميم من اختيار</p>
+                    <p class="card-text" style="margin-bottom: 25px;">العميل في حدود الباقة</p>
                     <h5>الكهرباء</h5>
                     <ul dir="rtl">
                         <li>لوحة عمومية</li>
@@ -172,7 +175,8 @@
                 <div class="card-body">
                     <h4>الباقة الفضية</h4>
                     <h3 class="card-title">1500 EGP</h3>
-                    <p class="card-text">التصميم من اختيار العميل في حدود الباقة.</p>
+                    <p class="card-text">التصميم من اختيار</p>
+                    <p class="card-text" style="margin-bottom: 25px;">العميل في حدود الباقة</p>
                     <h5>الكهرباء</h5>
                     <ul dir="rtl">
                         <li>أسلاك السویدى بالضمان </li>
@@ -218,18 +222,18 @@
                 </div>
             </div>
         </div>
-        <section id="special">
+        <!-- <section id="special">
             <div class="container wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="offer">
-                            <h2>باقة على ذوقك</h2>
+                            <h2>باقة على مزاجك</h2>
                             <h5>هنسيبك تختار اللي على مزاجك</h5>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </section>
 
     <section id="contact-us">
