--- a/index.html
+++ b/index.html
@@ -243,15 +243,19 @@
                 <hr class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s" dir="rtl">
                     <div class="col-lg-7 col-md-12 left">
-                        <div class="top">
+                        <div class="top" style="font-family: myFontLight;">
                             <h2>الأسكندرية - مصر</h2>
-                            <span style="font-size: 20px;">شارع محرم بك، الدور الخامس، شقة </span>
-                            <h4 style="margin-top: 50px;"><span>الإيميل : </span>rcc.eg.00@gmail.com </h4>
+
+                            <span style="font-size: 20px; font-family: myFontLight;">10 ش محرم بك, الدور الخامس, شقة 16
+                            </span>
+                            <h4 style="margin-top: 50px; font-family: myFontLight;"><span
+                                    style="font-family: myFontLight;">البريد الالكتروني :
+                                </span>rcc.eg.00@gmail.com </h4>
                         </div>
                         <div class="dash"></div>
                     </div>
-                    <div class="col-lg-5 col-md-12 right">
-                        <div class="bottom">
+                    <div class="col-lg-5 col-md-12 right" style="font-family: myFontLight;">
+                        <div class="bottom" style="font-family: myFontLight;">
                             <h3>اتصل بنا</h3>
                             <h4 dir="auto">(+20) 0106 2357 274</h4>
                         </div>
