--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     </ul>
                     <h5>الأبواب و الشبابيك</h5>
                     <ul dir="rtl">
-                        <li>أبواب داخلية من خشب الموسكيأو السويد بإكسسوارات إيطالية الصنع</li>
-                        <li>دهان الأبواب لاكية PS</li>
-                        <li>شباك ألوميتال قطاع 6مم</li>
+                        <li>أبواب داخلية من خشب الموسكي أو السويد بإكسسوارات إيطالية الصنع</li>
+                        <li>دهان الأبواب استر</li>
+                        <li>شباك ألوميتال قطاع صغير</li>
                     </ul>
                     <h5>الأرضيات</h5>
                     <ul dir="rtl">
