--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                     <h5>الأسقف</h5>
                     <ul dir="rtl">
-                        <li>بياض بصيص للأسقف شامل دهان بلاستيك</li>
+                        <li>بياض مصيص للأسقف شامل دهان بلاستيك</li>
                         <li>كرانيش فيوتك للأسقف الغرف والحمامات والمطبخ</li>
                         <li>بيت نور في الريشبشن</li>
                     </ul>
@@ -96,7 +96,7 @@
                     </ul>
                     <h5>الأسقف</h5>
                     <ul dir="rtl">
-                        <li>بياض بصيص للأسقف شامل دهان بلاستيك</li>
+                        <li>بياض مصيص للأسقف شامل دهان بلاستيك</li>
                         <li>كرانيش فيوتك للأسقف الغرف والحمامات والمطبخ</li>
                         <li>بيت نور في الريشبشن</li>
                     </ul>
@@ -145,7 +145,7 @@
                     </ul>
                     <h5>الأسقف</h5>
                     <ul dir="rtl">
-                        <li>بياض بصيص للأسقف شامل دهان بلاستيك</li>
+                        <li>بياض مصيص للأسقف شامل دهان بلاستيك</li>
                         <li>كرانيش فيوتك للأسقف الغرف والحمامات والمطبخ</li>
                         <li>اختيار تصميم الديكور في جميع اسقف الشقة</li>
                     </ul>
@@ -195,7 +195,7 @@
                     </ul>
                     <h5>الأسقف</h5>
                     <ul dir="rtl">
-                        <li>بياض بصيص للأسقف شامل دهان بلاستيك</li>
+                        <li>بياض مصيص للأسقف شامل دهان بلاستيك</li>
                         <li>كرانيش فيوتك للأسقف الغرف والحمامات والمطبخ</li>
                         <li>بيت نور في الريشبشن</li>
                     </ul>
